# sisrover

./: CHANGELOG.md  README.md
camsrv/: CMakeLists.txt  camera.cpp  camera.hpp  controller.cpp  controller.hpp  defines.hpp  ipcamera.cpp  ipcamera.hpp  main.cpp  server.cpp  server.hpp  webcamera.cpp  webcamera.hpp
camsrv/cam_client/: pubspec.yaml
camsrv/cam_client/cam_client_backend/: CMakeLists.txt  cam_client.cpp  cam_client.hpp  cam_client_backend.cpp
camsrv/cam_client/hello_library/: hello.def
camsrv/cam_client/lib/: main.dart
camsrv/cam_client/lib/c_api/: cam_client_c_api.dart
camsrv/cam_client/linux/: my_application.cc
camsrv/cam_client/test/: widget_test.dart
servers/: CMakeLists.txt
servers/camsrv/: CMakeLists.txt  camsrv_msg.hpp  controller.cpp  ipcamera.cpp  main.cpp  server.hpp  webcamera.hpp
servers/camsrv/cam_client/: README.md
servers/camsrv/cam_client/cam_client_backend/: cam_client.cpp  cam_client_backend.cpp
servers/camsrv/cam_client/hello_library/: hello.c  hello.h
servers/camsrv/cam_client/linux/: CMakeLists.txt
servers/daqsrv/: CMakeLists.txt  controller.cpp  controller.hpp  daq.cpp  daq.hpp  daq_message_type.hpp  defines.hpp  main.cpp  server.cpp  server.hpp
servers/joysrv/: CMakeLists.txt  joy_message_type.hpp  joysrv.cpp  joysrv.hpp  server.cpp  server.hpp
servers/sis_quick_usb/: CMakeLists.txt  sis_quick_usb.cpp
servers/sis_quick_usb/include/sis_quick_usb/: QuickUSB.h  sis_quick_usb.hpp
servers/sms_toolbox/: CMakeLists.txt  sms_toolbox.cpp
sisrover_gui/: README.md  pubspec.yaml
sisrover_gui/lib/: main.dart
sisrover_gui/lib/screens/login/: login_fields.dart  login_screen.dart
sisrover_gui/linux/: CMakeLists.txt  my_application.cc
sisrover_gui/test/: widget_test.dart
